idp/am/templates/gateway/gateway-ingress.yaml
---
# Source: am/templates/gateway/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: idp-am-gateway
  labels:
    app.kubernetes.io/name: am
    app.kubernetes.io/instance: idp
    app.kubernetes.io/version: 3.5.0
    app.kubernetes.io/component: "gateway"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: am-1.0.12
  annotations:
      kubernetes.io/app-root: "/auth"
      kubernetes.io/ingress.class: "nginx"
      kubernetes.io/rewrite-target: "/auth"
      nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: idp.rasouza.dev
      http:
        paths:
          - path: /auth
            backend:
              serviceName: idp-am-gateway
              servicePort: 82
  tls:
    - hosts:
      - am.example.com
      secretName: api-custom-cert
